test/samples/invalid/tc/alloc5.maruir
struct Foo<M> {
    arr: u8[] *M;
}

fun main(size: u256)
locals
    p1: u8[] *#memory,
    p2: Foo<#storage> *#storage;
{
    entry:
        p1 := alloc u8[size] in #memory;
        p2 := alloc Foo<#memory> in #storage;
        return;
}
